2017-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve 16-bit left-shift by 7,
	  improve transfers between hl and de (in codegen at a cost in peephole opt).

2017-07-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac:
	  Remove requirement of C++14.

2017-07-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* aclocal.m4:
	  Added new file.
	* configure
	* configure.ac:
	  Check if C++14 or C++11 is supported.

2017-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2567.c:
	  Test fpor bug #2567.

2017-07-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c,
	* src/SDCCicode.c
	* src/SDCCralloc.hpp: fix bug #2567, include block num in iCode debug

2017-07-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/gen.c: fix bug #2486 (frame pointer offset wrong)
	* src/z80/peeph-z80.def,
	* src/z80/peeph-r2k.def,
	* src/z80/peeph-tlcs90.def: fix unsafe rules exposed by fixing #2486
	* sdas/asrab/rabmch.c: fix encoding of ld (n+sp),hl instruction

2017-07-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Speed up register allocator.
	* src/stm8/gen.c:
	  Spped up code generation a little bit.

2017-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Speed up register allocator a little bit.

2017-07-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue similar to bug #2633.
	* src/SDCCralloc.hpp,
	  src/stm8/ralloc2.cc:
	  Speed up register allocator a bit.

2017-07-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug #2633.

2017-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/loop.c:
	  Improve narrowing of loop counters.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve writing of constants to bit-fields.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.c: